# cffi_embed_testing

./: .gitignore  CMakeLists.txt  README.md  _build.py  build.sh  cffi_env.yaml  frozen.py
c/: CMakeLists.txt  test.c
c++/: CMakeLists.txt  test.cpp
include/: my_model.h
lib/mypackage/: model2.py  python_class.py
